--- a/dial_mpc/examples/trt_obstacle_avoidance.yaml
+++ b/dial_mpc/examples/trt_obstacle_avoidance.yaml
@@ -1,12 +1,12 @@
 # DIAL-MPC
 seed: 0
-output_dir: uav_stationary_tracking
+output_dir: trt_obstacle_avoidance
 n_steps: 200
 
-env_name: uav_stationary_tracking
-Nsample: 2048
-Hsample: 25
-Hnode: 5
+env_name: trt_obstacle_avoidance
+Nsample: 4096
+Hsample: 50
+Hnode: 10
 Ndiffuse: 2
 Ndiffuse_init: 10
 temp_sample: 0.1
@@ -14,14 +14,14 @@ horizon_diffuse_factor: 0.9
 traj_diffuse_factor: 0.5
 update_method: mppi
 
-# UAV
+# TRT
 dt: 0.02
-timestep: 0.01
-action_scale: 15.0
-target_position: [5.0, -5.0, 5.0]
-target_orientation: [0.0, 0.0, 3.0]
+timestep: 0.02
+action_scale: [50, 50, 50, 50, 2, 2, 2, 2]
+target_position: [5.0, 0.0, 0.0]
+target_orientation: [0.0, 0.0, 0.0]
 weight_position: 1.0
 weight_orientation: 1.0
 weight_velocity: 0.01
 weight_angular_velocity: 0.01
-weight_action: 0.001
+weight_action: 0.01
