--- a/dial_mpc/examples/trt_stationary_tracking.yaml
+++ b/dial_mpc/examples/trt_stationary_tracking.yaml
@@ -1,9 +1,9 @@
 # DIAL-MPC
 seed: 0
-output_dir: uav_stationary_tracking
+output_dir: trt_stationary_tracking
 n_steps: 200
 
-env_name: uav_stationary_tracking
+env_name: trt_stationary_tracking
 Nsample: 2048
 Hsample: 25
 Hnode: 5
@@ -14,14 +14,14 @@ horizon_diffuse_factor: 0.9
 traj_diffuse_factor: 0.5
 update_method: mppi
 
-# UAV
+# TRT
 dt: 0.02
 timestep: 0.01
-action_scale: 15.0
+action_scale: [50, 50, 50, 50, 2, 2, 2, 2]
 target_position: [5.0, -5.0, 5.0]
 target_orientation: [0.0, 0.0, 3.0]
 weight_position: 1.0
 weight_orientation: 1.0
 weight_velocity: 0.01
 weight_angular_velocity: 0.01
-weight_action: 0.001
+weight_action: 0.01
